--- a/itodo/package.json
+++ b/itodo/package.json
@@ -15,9 +15,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullcalendar/core": "^6.1.8",
+    "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/react": "^6.1.8",
     "@mui/material": "^5.14.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/draft-js": "^0.11.12",
+    "@types/draftjs-to-html": "^0.8.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.7",
@@ -28,14 +32,17 @@
     "bootstrap": "^5.3.0",
     "dayjs": "^1.11.9",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "next": "^13.4.9",
     "postcss": "8.4.25",
     "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.6.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-dropzone": "^14.2.3",
@@ -43,5 +50,8 @@
     "redux": "^4.2.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.197"
   }
 }
