--- a/server/package.json
+++ b/server/package.json
@@ -3,9 +3,11 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "draftjs-to-html": "^0.9.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "typescript": "^5.1.6"
   },
