--- a/itodo/package.json
+++ b/itodo/package.json
@@ -30,6 +30,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "bufferutil": "^4.0.7",
     "dayjs": "^1.11.9",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -48,8 +49,10 @@
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
+    "socket.io-client": "^4.7.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "utf-8-validate": "^5.0.10"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.197"
