--- a/itodo/package.json
+++ b/itodo/package.json
@@ -54,6 +54,9 @@
     "typescript": "5.1.6",
     "utf-8-validate": "^5.0.10"
   },
+  "engines": {
+    "node": "14.x"
+  },
   "devDependencies": {
     "@types/lodash": "^4.14.197"
   }
