--- a/itodo/package.json
+++ b/itodo/package.json
@@ -58,6 +58,9 @@
     "node": "18.x"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.197"
+    "@types/lodash": "^4.14.197",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-standard": "^5.0.0"
   }
 }
