--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "typescript": "^5.1.6"
   },
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "build": "echo 'No build step required for Express'"
   },
   "devDependencies": {
