--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "build": "echo 'No build step required for Express'"
+    "build": "npm install"
   },
   "devDependencies": {
     "@types/node": "^20.4.2"
