integracion de chat gpt

--- a/itodo/.env
+++ b/itodo/.env
@@ -1,1 +1,2 @@
-NEXT_PUBLIC_API_URL='https://todoserver-8410.onrender.com'
+NEXT_PUBLIC_API_URL='http://localHost:500'
+NEXT_PUBLIC_CHATGPT_KEY='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'
