--- a/itodo/package.json
+++ b/itodo/package.json
@@ -55,7 +55,7 @@
     "eslint-config-next": "13.4.9",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "next": "^13.4.9",
+    "next": "^14.1.0",
     "postcss": "8.4.25",
     "re-resizable": "^6.9.9",
     "react": "^18.2.0",
@@ -67,6 +67,7 @@
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.2",
+    "styled-components": "^6.1.8",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6",
     "utf-8-validate": "^5.0.10"
