--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGODB_URL=mongodb+srv://esdras:Esdras2016@cluster0.sgnojtd.mongodb.net/iToDo?retryWrites=true&w=majority
+CHATGPT_KEY=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
